# kidney-iim

./: .gitignore  BcData.cpp  BcData.h  CMakeLists.txt  VelocityBcCoefs.cpp  VelocityBcCoefs.h  boundary_nodes.txt  cylinder.e  cylinder_paraview_export.stl  example.cpp  input3d  input3d-cylinder  input3d-kidney  surface_mesh_iim.e  surface_mesh_iim.msh  surface_mesh_iim.stl  surface_mesh_iim_sideset.e  utility.h
viz_IIM_3D/: cylinder_paraview_export.e  cylinder_thinoutput.ex2
viz_IIM_3D/visit_dump.00000/: processor_cluster.00000.samrai  summary.samrai
